make/kustomize/base/service-mesh/virtual-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
  - "bookinfo.172.22.11.21.nip.io"
  gateways:
  - bookinfo-gateway
  http:
  - name: core
    match:
    - uri:
        prefix: /api/books
    route:
    - destination:
        host: bookinfo-core
        port:
          number: 8080
  - name: rating
    match:
    - uri:
        prefix: /api/rating
    route:
    - destination:
        host: bookinfo-rating
        port:
          number: 8080
        subset: v1
      weight: 50
    - destination:
        host: bookinfo-rating
        port:
          number: 8080
        subset: v2
      weight: 50
  - name: orders
    match:
    - uri:
        prefix: /api/orders
    route:
    - destination:
        host: bookinfo-order
        port:
          number: 8080
